entre 3 e 4 de setembro

--- a/src/css/sass/modules/sprite.scss
+++ b/src/css/sass/modules/sprite.scss
@@ -13,48 +13,59 @@ $spritesheet: width height image $spritesheet-sprites;
 */
 $botao-topo-name: 'botaoTopo';
 $botao-topo-x: 389px;
-$botao-topo-y: 62px;
+$botao-topo-y: 143px;
 $botao-topo-offset-x: -389px;
-$botao-topo-offset-y: -62px;
+$botao-topo-offset-y: -143px;
 $botao-topo-width: 201px;
 $botao-topo-height: 70px;
-$botao-topo-total-width: 616px;
-$botao-topo-total-height: 438px;
+$botao-topo-total-width: 1211px;
+$botao-topo-total-height: 319px;
 $botao-topo-image: 'sprite.png';
-$botao-topo: (389px, 62px, -389px, -62px, 201px, 70px, 616px, 438px, 'sprite.png', 'botaoTopo', );
+$botao-topo: (389px, 143px, -389px, -143px, 201px, 70px, 1211px, 319px, 'sprite.png', 'botaoTopo', );
 $box-preto-name: 'boxPreto';
 $box-preto-x: 231px;
-$box-preto-y: 0px;
+$box-preto-y: 63px;
 $box-preto-offset-x: -231px;
-$box-preto-offset-y: 0px;
+$box-preto-offset-y: -63px;
 $box-preto-width: 158px;
 $box-preto-height: 181px;
-$box-preto-total-width: 616px;
-$box-preto-total-height: 438px;
+$box-preto-total-width: 1211px;
+$box-preto-total-height: 319px;
 $box-preto-image: 'sprite.png';
-$box-preto: (231px, 0px, -231px, 0px, 158px, 181px, 616px, 438px, 'sprite.png', 'boxPreto', );
+$box-preto: (231px, 63px, -231px, -63px, 158px, 181px, 1211px, 319px, 'sprite.png', 'boxPreto', );
 $desce-name: 'desce';
-$desce-x: 389px;
-$desce-y: 132px;
-$desce-offset-x: -389px;
-$desce-offset-y: -132px;
+$desce-x: 835px;
+$desce-y: 143px;
+$desce-offset-x: -835px;
+$desce-offset-y: -143px;
 $desce-width: 177px;
 $desce-height: 26px;
-$desce-total-width: 616px;
-$desce-total-height: 438px;
+$desce-total-width: 1211px;
+$desce-total-height: 319px;
 $desce-image: 'sprite.png';
-$desce: (389px, 132px, -389px, -132px, 177px, 26px, 616px, 438px, 'sprite.png', 'desce', );
+$desce: (835px, 143px, -835px, -143px, 177px, 26px, 1211px, 319px, 'sprite.png', 'desce', );
 $flamula-name: 'flamula';
-$flamula-x: 389px;
-$flamula-y: 0px;
-$flamula-offset-x: -389px;
-$flamula-offset-y: 0px;
+$flamula-x: 819px;
+$flamula-y: 63px;
+$flamula-offset-x: -819px;
+$flamula-offset-y: -63px;
 $flamula-width: 227px;
 $flamula-height: 62px;
-$flamula-total-width: 616px;
-$flamula-total-height: 438px;
+$flamula-total-width: 1211px;
+$flamula-total-height: 319px;
 $flamula-image: 'sprite.png';
-$flamula: (389px, 0px, -389px, 0px, 227px, 62px, 616px, 438px, 'sprite.png', 'flamula', );
+$flamula: (819px, 63px, -819px, -63px, 227px, 62px, 1211px, 319px, 'sprite.png', 'flamula', );
+$great-place-name: 'greatPlace';
+$great-place-x: 389px;
+$great-place-y: 63px;
+$great-place-offset-x: -389px;
+$great-place-offset-y: -63px;
+$great-place-width: 194px;
+$great-place-height: 80px;
+$great-place-total-width: 1211px;
+$great-place-total-height: 319px;
+$great-place-image: 'sprite.png';
+$great-place: (389px, 63px, -389px, -63px, 194px, 80px, 1211px, 319px, 'sprite.png', 'greatPlace', );
 $imagem-quem-somos-name: 'imagemQuemSomos';
 $imagem-quem-somos-x: 0px;
 $imagem-quem-somos-y: 0px;
@@ -62,147 +73,180 @@ $imagem-quem-somos-offset-x: 0px;
 $imagem-quem-somos-offset-y: 0px;
 $imagem-quem-somos-width: 231px;
 $imagem-quem-somos-height: 319px;
-$imagem-quem-somos-total-width: 616px;
-$imagem-quem-somos-total-height: 438px;
+$imagem-quem-somos-total-width: 1211px;
+$imagem-quem-somos-total-height: 319px;
 $imagem-quem-somos-image: 'sprite.png';
-$imagem-quem-somos: (0px, 0px, 0px, 0px, 231px, 319px, 616px, 438px, 'sprite.png', 'imagemQuemSomos', );
+$imagem-quem-somos: (0px, 0px, 0px, 0px, 231px, 319px, 1211px, 319px, 'sprite.png', 'imagemQuemSomos', );
 $item-lateral-name: 'itemLateral';
-$item-lateral-x: 0px;
-$item-lateral-y: 319px;
-$item-lateral-offset-x: 0px;
-$item-lateral-offset-y: -319px;
+$item-lateral-x: 583px;
+$item-lateral-y: 63px;
+$item-lateral-offset-x: -583px;
+$item-lateral-offset-y: -63px;
 $item-lateral-width: 236px;
 $item-lateral-height: 65px;
-$item-lateral-total-width: 616px;
-$item-lateral-total-height: 438px;
+$item-lateral-total-width: 1211px;
+$item-lateral-total-height: 319px;
 $item-lateral-image: 'sprite.png';
-$item-lateral: (0px, 319px, 0px, -319px, 236px, 65px, 616px, 438px, 'sprite.png', 'itemLateral', );
+$item-lateral: (583px, 63px, -583px, -63px, 236px, 65px, 1211px, 319px, 'sprite.png', 'itemLateral', );
 $menu1-name: 'menu1';
-$menu1-x: 419px;
-$menu1-y: 184px;
-$menu1-offset-x: -419px;
-$menu1-offset-y: -184px;
-$menu1-width: 30px;
-$menu1-height: 30px;
-$menu1-total-width: 616px;
-$menu1-total-height: 438px;
+$menu1-x: 1108px;
+$menu1-y: 63px;
+$menu1-offset-x: -1108px;
+$menu1-offset-y: -63px;
+$menu1-width: 31px;
+$menu1-height: 31px;
+$menu1-total-width: 1211px;
+$menu1-total-height: 319px;
 $menu1-image: 'sprite.png';
-$menu1: (419px, 184px, -419px, -184px, 30px, 30px, 616px, 438px, 'sprite.png', 'menu1', );
+$menu1: (1108px, 63px, -1108px, -63px, 31px, 31px, 1211px, 319px, 'sprite.png', 'menu1', );
 $menu2-name: 'menu2';
-$menu2-x: 449px;
-$menu2-y: 184px;
-$menu2-offset-x: -449px;
-$menu2-offset-y: -184px;
-$menu2-width: 30px;
-$menu2-height: 30px;
-$menu2-total-width: 616px;
-$menu2-total-height: 438px;
+$menu2-x: 1139px;
+$menu2-y: 63px;
+$menu2-offset-x: -1139px;
+$menu2-offset-y: -63px;
+$menu2-width: 31px;
+$menu2-height: 31px;
+$menu2-total-width: 1211px;
+$menu2-total-height: 319px;
 $menu2-image: 'sprite.png';
-$menu2: (449px, 184px, -449px, -184px, 30px, 30px, 616px, 438px, 'sprite.png', 'menu2', );
+$menu2: (1139px, 63px, -1139px, -63px, 31px, 31px, 1211px, 319px, 'sprite.png', 'menu2', );
 $menu3-name: 'menu3';
-$menu3-x: 389px;
-$menu3-y: 184px;
-$menu3-offset-x: -389px;
-$menu3-offset-y: -184px;
-$menu3-width: 30px;
-$menu3-height: 30px;
-$menu3-total-width: 616px;
-$menu3-total-height: 438px;
+$menu3-x: 1170px;
+$menu3-y: 63px;
+$menu3-offset-x: -1170px;
+$menu3-offset-y: -63px;
+$menu3-width: 31px;
+$menu3-height: 31px;
+$menu3-total-width: 1211px;
+$menu3-total-height: 319px;
 $menu3-image: 'sprite.png';
-$menu3: (389px, 184px, -389px, -184px, 30px, 30px, 616px, 438px, 'sprite.png', 'menu3', );
+$menu3: (1170px, 63px, -1170px, -63px, 31px, 31px, 1211px, 319px, 'sprite.png', 'menu3', );
+$menu4-name: 'menu4';
+$menu4-x: 1046px;
+$menu4-y: 63px;
+$menu4-offset-x: -1046px;
+$menu4-offset-y: -63px;
+$menu4-width: 31px;
+$menu4-height: 31px;
+$menu4-total-width: 1211px;
+$menu4-total-height: 319px;
+$menu4-image: 'sprite.png';
+$menu4: (1046px, 63px, -1046px, -63px, 31px, 31px, 1211px, 319px, 'sprite.png', 'menu4', );
+$menu5-name: 'menu5';
+$menu5-x: 1077px;
+$menu5-y: 63px;
+$menu5-offset-x: -1077px;
+$menu5-offset-y: -63px;
+$menu5-width: 31px;
+$menu5-height: 31px;
+$menu5-total-width: 1211px;
+$menu5-total-height: 319px;
+$menu5-image: 'sprite.png';
+$menu5: (1077px, 63px, -1077px, -63px, 31px, 31px, 1211px, 319px, 'sprite.png', 'menu5', );
 $menu-azul1-name: 'menuAzul1';
-$menu-azul1-x: 590px;
-$menu-azul1-y: 104px;
-$menu-azul1-offset-x: -590px;
-$menu-azul1-offset-y: -104px;
+$menu-azul1-x: 1088px;
+$menu-azul1-y: 94px;
+$menu-azul1-offset-x: -1088px;
+$menu-azul1-offset-y: -94px;
 $menu-azul1-width: 21px;
 $menu-azul1-height: 21px;
-$menu-azul1-total-width: 616px;
-$menu-azul1-total-height: 438px;
+$menu-azul1-total-width: 1211px;
+$menu-azul1-total-height: 319px;
 $menu-azul1-image: 'sprite.png';
-$menu-azul1: (590px, 104px, -590px, -104px, 21px, 21px, 616px, 438px, 'sprite.png', 'menuAzul1', );
+$menu-azul1: (1088px, 94px, -1088px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul1', );
 $menu-azul2-name: 'menuAzul2';
-$menu-azul2-x: 590px;
-$menu-azul2-y: 83px;
-$menu-azul2-offset-x: -590px;
-$menu-azul2-offset-y: -83px;
+$menu-azul2-x: 1067px;
+$menu-azul2-y: 94px;
+$menu-azul2-offset-x: -1067px;
+$menu-azul2-offset-y: -94px;
 $menu-azul2-width: 21px;
 $menu-azul2-height: 21px;
-$menu-azul2-total-width: 616px;
-$menu-azul2-total-height: 438px;
+$menu-azul2-total-width: 1211px;
+$menu-azul2-total-height: 319px;
 $menu-azul2-image: 'sprite.png';
-$menu-azul2: (590px, 83px, -590px, -83px, 21px, 21px, 616px, 438px, 'sprite.png', 'menuAzul2', );
+$menu-azul2: (1067px, 94px, -1067px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul2', );
 $menu-azul3-name: 'menuAzul3';
-$menu-azul3-x: 590px;
-$menu-azul3-y: 62px;
-$menu-azul3-offset-x: -590px;
-$menu-azul3-offset-y: -62px;
+$menu-azul3-x: 1046px;
+$menu-azul3-y: 94px;
+$menu-azul3-offset-x: -1046px;
+$menu-azul3-offset-y: -94px;
 $menu-azul3-width: 21px;
 $menu-azul3-height: 21px;
-$menu-azul3-total-width: 616px;
-$menu-azul3-total-height: 438px;
+$menu-azul3-total-width: 1211px;
+$menu-azul3-total-height: 319px;
 $menu-azul3-image: 'sprite.png';
-$menu-azul3: (590px, 62px, -590px, -62px, 21px, 21px, 616px, 438px, 'sprite.png', 'menuAzul3', );
+$menu-azul3: (1046px, 94px, -1046px, -94px, 21px, 21px, 1211px, 319px, 'sprite.png', 'menuAzul3', );
+$pessoas-topo-name: 'pessoasTopo';
+$pessoas-topo-x: 231px;
+$pessoas-topo-y: 0px;
+$pessoas-topo-offset-x: -231px;
+$pessoas-topo-offset-y: 0px;
+$pessoas-topo-width: 980px;
+$pessoas-topo-height: 63px;
+$pessoas-topo-total-width: 1211px;
+$pessoas-topo-total-height: 319px;
+$pessoas-topo-image: 'sprite.png';
+$pessoas-topo: (231px, 0px, -231px, 0px, 980px, 63px, 1211px, 319px, 'sprite.png', 'pessoasTopo', );
 $setinha-direita-name: 'setinhaDireita';
-$setinha-direita-x: 566px;
-$setinha-direita-y: 144px;
-$setinha-direita-offset-x: -566px;
-$setinha-direita-offset-y: -144px;
+$setinha-direita-x: 1201px;
+$setinha-direita-y: 63px;
+$setinha-direita-offset-x: -1201px;
+$setinha-direita-offset-y: -63px;
 $setinha-direita-width: 10px;
 $setinha-direita-height: 10px;
-$setinha-direita-total-width: 616px;
-$setinha-direita-total-height: 438px;
+$setinha-direita-total-width: 1211px;
+$setinha-direita-total-height: 319px;
 $setinha-direita-image: 'sprite.png';
-$setinha-direita: (566px, 144px, -566px, -144px, 10px, 10px, 616px, 438px, 'sprite.png', 'setinhaDireita', );
+$setinha-direita: (1201px, 63px, -1201px, -63px, 10px, 10px, 1211px, 319px, 'sprite.png', 'setinhaDireita', );
 $sobe-name: 'sobe';
-$sobe-x: 389px;
-$sobe-y: 158px;
-$sobe-offset-x: -389px;
-$sobe-offset-y: -158px;
+$sobe-x: 1012px;
+$sobe-y: 143px;
+$sobe-offset-x: -1012px;
+$sobe-offset-y: -143px;
 $sobe-width: 177px;
 $sobe-height: 26px;
-$sobe-total-width: 616px;
-$sobe-total-height: 438px;
+$sobe-total-width: 1211px;
+$sobe-total-height: 319px;
 $sobe-image: 'sprite.png';
-$sobe: (389px, 158px, -389px, -158px, 177px, 26px, 616px, 438px, 'sprite.png', 'sobe', );
+$sobe: (1012px, 143px, -1012px, -143px, 177px, 26px, 1211px, 319px, 'sprite.png', 'sobe', );
 $vai-name: 'vai';
-$vai-x: 566px;
-$vai-y: 132px;
-$vai-offset-x: -566px;
-$vai-offset-y: -132px;
+$vai-x: 1109px;
+$vai-y: 94px;
+$vai-offset-x: -1109px;
+$vai-offset-y: -94px;
 $vai-width: 25px;
 $vai-height: 12px;
-$vai-total-width: 616px;
-$vai-total-height: 438px;
+$vai-total-width: 1211px;
+$vai-total-height: 319px;
 $vai-image: 'sprite.png';
-$vai: (566px, 132px, -566px, -132px, 25px, 12px, 616px, 438px, 'sprite.png', 'vai', );
+$vai: (1109px, 94px, -1109px, -94px, 25px, 12px, 1211px, 319px, 'sprite.png', 'vai', );
 $ver-mais-name: 'verMais';
-$ver-mais-x: 0px;
-$ver-mais-y: 384px;
-$ver-mais-offset-x: 0px;
-$ver-mais-offset-y: -384px;
+$ver-mais-x: 590px;
+$ver-mais-y: 143px;
+$ver-mais-offset-x: -590px;
+$ver-mais-offset-y: -143px;
 $ver-mais-width: 245px;
 $ver-mais-height: 54px;
-$ver-mais-total-width: 616px;
-$ver-mais-total-height: 438px;
+$ver-mais-total-width: 1211px;
+$ver-mais-total-height: 319px;
 $ver-mais-image: 'sprite.png';
-$ver-mais: (0px, 384px, 0px, -384px, 245px, 54px, 616px, 438px, 'sprite.png', 'verMais', );
+$ver-mais: (590px, 143px, -590px, -143px, 245px, 54px, 1211px, 319px, 'sprite.png', 'verMais', );
 $volta-name: 'volta';
-$volta-x: 591px;
-$volta-y: 132px;
-$volta-offset-x: -591px;
-$volta-offset-y: -132px;
+$volta-x: 1134px;
+$volta-y: 94px;
+$volta-offset-x: -1134px;
+$volta-offset-y: -94px;
 $volta-width: 25px;
 $volta-height: 12px;
-$volta-total-width: 616px;
-$volta-total-height: 438px;
+$volta-total-width: 1211px;
+$volta-total-height: 319px;
 $volta-image: 'sprite.png';
-$volta: (591px, 132px, -591px, -132px, 25px, 12px, 616px, 438px, 'sprite.png', 'volta', );
-$spritesheet-width: 616px;
-$spritesheet-height: 438px;
+$volta: (1134px, 94px, -1134px, -94px, 25px, 12px, 1211px, 319px, 'sprite.png', 'volta', );
+$spritesheet-width: 1211px;
+$spritesheet-height: 319px;
 $spritesheet-image: 'sprite.png';
-$spritesheet-sprites: ($botao-topo, $box-preto, $desce, $flamula, $imagem-quem-somos, $item-lateral, $menu1, $menu2, $menu3, $menu-azul1, $menu-azul2, $menu-azul3, $setinha-direita, $sobe, $vai, $ver-mais, $volta, );
-$spritesheet: (616px, 438px, 'sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($botao-topo, $box-preto, $desce, $flamula, $great-place, $imagem-quem-somos, $item-lateral, $menu1, $menu2, $menu3, $menu4, $menu5, $menu-azul1, $menu-azul2, $menu-azul3, $pessoas-topo, $setinha-direita, $sobe, $vai, $ver-mais, $volta, );
+$spritesheet: (1211px, 319px, 'sprite.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
