--- a/src/css/sass/partials/header.scss
+++ b/src/css/sass/partials/header.scss
@@ -10,7 +10,7 @@
 	width: 100%;
 	background: url(img/banner.png) center top;
 	background-size: cover;
-	height: 60vh;
+	height: 100vh;
 	min-height: 300px;
 	margin-bottom: 20px;
 	overflow: hidden;
@@ -75,50 +75,54 @@
 			margin-top: 0;
 			list-style: none;
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				@include span(12);
 				margin-top: 40px;
 			}
 
 			li {
-				@include span(1 of 2 0);
-				height: 60px;
-				padding: 0 20px;
-				text-transform: uppercase;
-				text-align: center;
+				@include span(1 of 3 0);
 
-				border-left: solid 1px $cinza;
-				border-right: solid 1px $cinza;
-
-				display: -webkit-box;
-				display: -moz-box;
-				display: box;
-				-webkit-box-align: center;
-				-moz-box-align: center;
-				box-align: center;
-
-				@include susy-media (max-width $wrapper-width) {
-					@include span(12);
+				&:nth-child(2) a {
 					border: none;
-					display: block;
-					height: initial;
-					padding: 20px 0;
-					border-bottom: solid 3px;
-
-					&:last-child {
-						border-bottom: none;
-					}
-				}
-
-				&:first-child {
-					border-right: none;
 				}
 
 				a {
 					font-weight: 600;
 
-					&:hover {
-						color: $azul;
+					height: 60px;
+					padding: 10px 20px;
+					text-transform: uppercase;
+					text-align: center !important;
+
+					border-left: solid 1px $cinza;
+					border-right: solid 1px $cinza;
+
+					display: block;
+
+					// display: -webkit-box;
+					// display: -moz-box;
+					// display: box;
+					// -webkit-box-align: center;
+					// -moz-box-align: center;
+					// box-align: center;
+
+					@include susy-media (max-width 960px) {
+						@include span(12);
+						border: none;
+						display: block;
+						height: initial;
+						padding: 20px 0;
+						border-bottom: solid 3px;
+
+						&:last-child {
+							border-bottom: none;
+						}
+					}
+
+					&:hover, &.current {
+						background-color: $azul;
+						color: #fff;
 					}
 				}
 			}
@@ -166,7 +170,7 @@
 		background-color: rgba(#fff, .6);
 		height: 90px;
 
-		@include susy-media (max-width $wrapper-width) {
+		@include susy-media (max-width 960px) {
 			background-color: transparent;
 			height: initial;
 		}
@@ -178,27 +182,33 @@
 		#menuPrincipal {
 			list-style: none;
 			padding: 0;
-			width: $box-preto-width*3;
 			margin: auto;
+			@include container(($box-preto-width+2) * 5);
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				@include span(12);
 				margin-top: 17px;
 				display: block;
 			}
 
 			.boxPreto {
-
-				@include span(1 of 3 0);
+				float: left;
+				width: $box-preto-width +2px;
+				// @include span(4 ($box-preto-width 2px) fluid inside-static rtl);
 				overflow: hidden;
-				background-color: #111;
+				background-color: transparent;
 				height: inherit;
 				padding: 10px 0;
 				margin-top: 0;
 
 				transition: margin-top .3s;
 
-				@include susy-media (max-width $wrapper-width) {
+				&.boxAtual {
+					margin-top: -60px;
+					border-top: solid 4px $azul;
+				}
+
+				@include susy-media (max-width 960px) {
 					@include span(1 of 2 0);
 					background: #333;
 					padding: 20px 0;
@@ -208,8 +218,26 @@
 				&:hover {
 					margin-top: -89px;
 
-					@include susy-media (max-width $wrapper-width) {
+					@include susy-media (max-width 960px) {
 						margin-top: initial;
+					}
+				}
+
+				&:nth-child(3) {
+
+					.cadaItem {
+
+						.icone {
+							margin-bottom: 3px;
+						}
+
+						h3 {
+							margin-bottom: 10px;
+
+							@include susy-media (max-width 960px) {
+								margin: 0;
+							}
+						}
 					}
 				}
 
@@ -225,9 +253,9 @@
 
 					.icone {
 						display: inline-block;
-						margin-bottom: 14px;
+						margin-bottom: 16px;
 
-						@include susy-media (max-width $wrapper-width) {
+						@include susy-media (max-width 960px) {
 							display: none;
 						}
 					}
@@ -239,7 +267,7 @@
 						letter-spacing: 1px;
 						font-weight: 500;
 
-						@include susy-media (max-width $wrapper-width) {
+						@include susy-media (max-width 960px) {
 							margin: 0;
 						}
 					}
@@ -256,7 +284,7 @@
 						margin: 10px;
 						font-size: 1.2rem;
 
-						@include susy-media (max-width $wrapper-width) {
+						@include susy-media (max-width 960px) {
 							display: none;
 						}
 					}
@@ -264,7 +292,7 @@
 					.saibaMais {
 						position: relative;
 
-						@include susy-media (max-width $wrapper-width) {
+						@include susy-media (max-width 960px) {
 							display: none;
 						}
 					}
@@ -274,7 +302,7 @@
 						*display: inline;
 						*zoom: 1;
 
-						@include susy-media (max-width $wrapper-width) {
+						@include susy-media (max-width 960px) {
 							display: none;
 						}
 					}
@@ -305,7 +333,7 @@
 			padding: 0;
 
 			@include susy-media (max-width $wrapper-width) {
-				
+
 			}
 
 			.boxPreto {
@@ -352,7 +380,7 @@
 						display: none;
 					}
 				}
-			
+
 			&:last-child a h3 {
 				border-bottom: none;
 			}
@@ -396,22 +424,22 @@
 	.hamburger__inner {
 	  display: block;
 	  width: $hamburger__width;
-	  height: $hamburger__layer__height; 
+	  height: $hamburger__layer__height;
 	  margin-top: $hamburger__layer__height * 2;
 	  background: $hamburger__colour;
 	  -webkit-transition: all 0.4s ease-in-out;
 	  transition: all 0.4s ease-in-out;
-	  
-	  &::before, &::after { 
-	    display: block; 
-	    position: absolute; 
+
+	  &::before, &::after {
+	    display: block;
+	    position: absolute;
 	    content: "";
 	    z-index: -1;
-	    width: $hamburger__width; 
-	    height: $hamburger__layer__height; 
+	    width: $hamburger__width;
+	    height: $hamburger__layer__height;
 	    background: $hamburger__colour;
 	    -webkit-transition: all 0.4s ease-in-out;
-	    transition: all 0.4s ease-in-out; 
+	    transition: all 0.4s ease-in-out;
 	  }
 	  &::before {
 	    top: 0;
@@ -430,16 +458,16 @@
 	      top: $hamburger__layer__height * 2;
 	    }
 	    &::before {
-	      -webkit-transform: rotate(-45deg); 
-	      -ms-transform: rotate(-45deg); 
+	      -webkit-transform: rotate(-45deg);
+	      -ms-transform: rotate(-45deg);
 	      transform: rotate(-45deg);
 	    }
 	    &::after {
-	      -webkit-transform: rotate(45deg); 
-	      -ms-transform: rotate(45deg); 
+	      -webkit-transform: rotate(45deg);
+	      -ms-transform: rotate(45deg);
 	      transform: rotate(45deg);
 	    }
-	  } 
+	  }
 	}
 }
 
