--- a/src/css/sass/partials/pages.scss
+++ b/src/css/sass/partials/pages.scss
@@ -410,3 +410,65 @@ article {
 	}
 
 }
+
+// Prêmios e Certificações
+
+.certificacoes {
+
+	h4 {
+		font-size: 2.4rem;
+		font-weight: 500;
+		text-align: center;
+		margin-bottom: 0;
+	}
+
+	.grupoPremios {
+		@include container();
+
+		.cadaPremio {
+			@include span(1 of 4);
+			text-align: center;
+
+			.contemLogo {
+				border: solid 1px $azul;
+				height: 200px;
+				padding: 20px;
+
+				white-space: nowrap;
+				text-align: center;
+				margin: 1em 0;
+			}
+
+			.helper {
+		    display: inline-block;
+		    height: 100%;
+		    vertical-align: middle;
+			}
+
+			img {
+		    vertical-align: middle;
+		    max-height: 200px;
+				max-width: 100%;
+			}
+		}
+	}
+
+	.certificacaoMor {
+		overflow: hidden;
+		margin: 0 2% 50px;
+
+		.logoEtexto {
+			@include container();
+			border: solid 1px $azul;
+
+			img {
+				@include span(4);
+			}
+
+			p {
+				@include span(8);
+				font-size: 2rem;
+			}
+		}
+	}
+}
